original jokes displaying on dom

--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>JEN Stack Code Challenge</title>
     <script src="vendors/jquery-3.0.0.min.js" charset="utf-8"></script>
     <script src="scripts/cc3.js" charset="utf-8"></script>
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>JEN Stack Code Challenge</h1>
     <input type='text' id='whoseJokeIn' placeholder='whose joke' />
     <input type='text' id='questionIn' placeholder='question' />
@@ -15,5 +17,9 @@
     <h2>Jokes:</h2>
     <div id='outputDiv'>
     </div>
-  </body>
+    <div id="oldDiv">
+
+    </div>
+</body>
+
 </html>
